--- a/homePage.css
+++ b/homePage.css
@@ -1,13 +1,47 @@
 *{
 	text-align: center;
 	color:white;
+	font-family: Arial;
 }
 body {
 	background: #6b6b6b;
 	background-image:url('images/background1.png');
 	border-width:  5px;
 }
+/* Style the tab */
+.tab {
+	overflow: hidden;
+	border-bottom: 1px solid white;
+}
 
+/* Style the buttons inside the tab */
+.tab button {
+	background-color: inherit;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
+	font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+	background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+	background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+	display: none;
+	padding: 6px 12px;
+	border-top: none;
+}
 
 #header {
 	position: center;
@@ -30,6 +64,7 @@ body {
 	box-shadow: 0.5em 0.5em 1px #A6A6A6;
 	*/
 }
+
 
 #meltStarContainer{
 	width:10em;
