Chart resizes to div size, so set div size. Also able to do a simple percent increase calculation https://stackoverflow.com/questions/9453421/how-to-round-float-numbers-in-javascript

--- a/homePage.css
+++ b/homePage.css
@@ -128,9 +128,11 @@ body {
 	margin:0px;
 }
 			
-#myChart{
-    width:5em;
-	height:2em;
+#chartContainer{
+    width:50em;
+	height:25em;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 #chartBckgnd{
