--- a/homePage.css
+++ b/homePage.css
@@ -144,6 +144,7 @@ body {
 #submitButton{
 	display: inline-block;
 	background: grey;
+	padding: 5px 5px 5px 5px;	
 }
 #StartEndForm{
     padding-bottom: 1em;
