Added legend labels and was able to have mode: nearest so that the tooltip would show even if not intersecting point

--- a/homePage.css
+++ b/homePage.css
@@ -65,12 +65,14 @@ body {
 	*/
 }
 
+#companyName
+{
+	margin-bottom:0px;
+}
 
-#meltStarContainer{
-	width:10em;
-	height:10em;
-	background: #000000;
-	margin: auto;
+#returnVal
+{
+	margin-top:0px;
 }
 
 
